--- a/index.html
+++ b/index.html
@@ -3,40 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello world</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="ass.css">
 </head>
 <body>
-
-    <div class="container">
-        <h1>ENIOLA'S CALCULATOR</h1>
-        <div class="calculator">
-            <input type="text" name="screen" id="1" oninput="input()" onsubmit="ent('=');" disabled>
-            <button onclick="ent('CL')">CL</button>
-            <button onclick="ent('DEL')">DEL</button>
-            <button onclick="ent('%')">%</button>
-            <button onclick="ent('/')">/</button>
-            <button onclick="ent('7')">7</button>
-            <button onclick="ent('8')">8</button>
-            <button onclick="ent('9')">9</button>
-            <button onclick="ent('*')">x</button>
-            <button onclick="ent('4')">4</button>
-            <button onclick="ent('5')">5</button>
-            <button onclick="ent('6')">6</button>
-            <button onclick="ent('-')">-</button>
-            <button onclick="ent('1')">1</button>
-            <button onclick="ent('2')">2</button>
-            <button onclick="ent('3')">3</button>
-            <button onclick="ent('+')">+</button>
-            <button onclick="ent('0')">0</button>
-            <button onclick="ent('.')">.</button>
-            <button onclick="themef()" id="theme"></button>
-            <button onclick="ent('=')" id="eq">=</button>
+    <section>
+        <nav>
+            <h1>EMI</h1>
+            <ul>
+                <li>About</li>
+                <li>Services</li>
+                <li>Projects</li>
+                <li>Contact</li>
+                <li class="btn">Download CV</li>
+            </ul>
+            <div class="open resp"></div>
+            <div class="close resp"></div>
+        </nav>
+    </section>
+    <section class="main">
+        <div class="container1">
+            <div class="sub1">
+                <h4>Hello! I'm</h4>
+                <h1>Eniola Disu</h1>
+                <h3>A Web Developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. ufhhfg juebvn giyn <br> Aut voluptatibus nam facere illum at qui est vous nitu irjth <br> optio labore inventore atque! jkhgl pork</p>
+                <button>Email Me</button>
+            </div>
         </div>
-    </div>
+        
+        <img src="12345.jpg" alt="">
+        <div class="container2"></div>
+    </section>
 
-    <a href="ass.html">Page</a>
+    <a href="index.html">YO</a>
 
-    <script src="index.js"></script>
+    <script src="ass.js"></script>
+    <script src="https://kit.fontawesome.com/2144982ae8.js" crossorigin="anonymous"></script>
 </body>
 </html>
