--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="ass.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
 </head>
 <body>
     <section>
@@ -17,8 +19,12 @@
                 <li>Contact</li>
                 <li class="btn">Download CV</li>
             </ul>
-            <div class="open resp"></div>
-            <div class="close resp"></div>
+            <div class="open resp">
+                <i class="fa-solid fa-bars fa-2xl"></i>
+            </div>
+            <div class="close resp">
+                <i class="fa-solid fa-xmark fa-2xl"></i>
+            </div>
         </nav>
     </section>
     <section class="main">
