--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/ass.css">
     <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
 </head>
 <body>
     <section>
@@ -18,12 +17,22 @@
                 <li>Projects</li>
                 <li>Contact</li>
                 <li class="btn">Download CV</li>
+                <li>
+                    <div class="theme1">
+                        <div class="off1"><i class="fa-solid fa-toggle-off fa-2xl"></i></div>
+                        <div class="on1"><i class="fa-solid fa-toggle-on fa-2xl"></i></div>
+                    </div>
+                </li>
             </ul>
             <div class="open resp">
                 <i class="fa-solid fa-bars fa-2xl"></i>
             </div>
             <div class="close resp">
-                <i class="fa-solid fa-xmark fa-2xl"></i>
+                <i class="fa-solid fa-remove fa-2xl"></i>
+            </div>
+            <div class="theme">
+                <div class="off"><i class="fa-solid fa-toggle-off fa-2xl"></i></div>
+                <div class="on"><i class="fa-solid fa-toggle-on fa-2xl"></i></div>
             </div>
         </nav>
     </section>
@@ -43,6 +52,5 @@
     </section>
 
     <script src="ass.js"></script>
-    <script src="https://kit.fontawesome.com/2144982ae8.js" crossorigin="anonymous"></script>
 </body>
 </html>
