--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
     </section>
 
     <script src="ass.js"></script>
+    <script src="https//kit.fontawesome.com/2144982ae8.js" crossorigin="anonymous"></script>
 </body>
 </html>
